# RLHF-Pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TASK_11_MODEL_PUBLISHING_SUMMARY.md  TASK_12_INTEGRATION_SUMMARY.md  TASK_13_COLAB_INTEGRATION_SUMMARY.md  TASK_1_2_SUMMARY.md  TASK_2_2_ENHANCEMENTS.md  TASK_7_INTEGRATION_REPORT.md  TESTING_FRAMEWORK_SUMMARY.md  integration_test_report.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  task_12_integration_validation.py  test_core_integration_minimal.py  test_end_to_end_pipeline_integration.py  test_pipeline_integration_interfaces.py  tox.ini  validate_experiment_tracker.py  validate_integration.py  validate_setup.py
.github/workflows/: ci.yml
.kiro/specs/rlhf-phi3-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
configs/: colab_config.yaml  default_config.yaml
docs/: COLAB_SETUP_GUIDE.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md
examples/: config_demo.py  reproducibility_demo.py  simple_reproducibility_demo.py  training_provenance_demo.py
notebooks/: 01_setup_and_configuration.ipynb  README.md  colab_integration_demo.ipynb  colab_utils.py
outputs/reproducibility_demo/: environment_info.json  ppo_reproducibility_record.json  reproducibility_manifest.json  reward_reproducibility_record.json  sft_reproducibility_record.json
rlhf_phi3/: __init__.py
rlhf_phi3/config/: __init__.py  config_manager.py
rlhf_phi3/data/: __init__.py  dataset_manager.py
rlhf_phi3/evaluation/: __init__.py  evaluation_engine.py
rlhf_phi3/publishing/: __init__.py  model_publisher.py
rlhf_phi3/tracking/: __init__.py  experiment_tracker.py
rlhf_phi3/training/: __init__.py  ppo_trainer.py  reward_trainer.py  sft_trainer.py  training_orchestrator.py
rlhf_phi3/utils/: __init__.py  error_handler.py  reproducibility.py  training_provenance.py
scripts/: recreate_environment.py
stage1_sft/: README.md  __init__.py  dataset.py  test_sft.py  train_sft.py
tests/: README.md  __init__.py  conftest.py  hypothesis_config.py  test_reproducibility.py  test_reproducibility_integration.py  test_reproducibility_properties.py  utils.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  test_component_interfaces.py  test_core_components_integration.py  test_training_stages_integration.py
tests/property/: __init__.py  test_checkpoint_manager_properties.py  test_colab_integration_properties.py  test_config_manager_properties.py  test_dataset_manager_properties.py  test_error_handling_properties.py  test_evaluation_engine_properties.py  test_experiment_tracker_properties.py  test_model_manager_properties.py  test_model_publisher_properties.py  test_training_orchestrator_properties.py
tests/unit/: __init__.py  test_checkpoint_manager.py  test_colab_utils.py  test_config_manager.py  test_dataset_manager.py  test_dataset_manager_enhancements.py  test_dataset_manager_validation.py  test_error_handling.py  test_evaluation_engine.py  test_experiment_tracker.py  test_model_manager.py  test_model_publisher.py  test_training_orchestrator.py
